allowed preview features & added openapi and start validation